<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sitios_t_risticos"
            android:textAlignment="center"
            android:textSize="25sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="611dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="-12dp">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/lt1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/gran_muralla_china"
                android:src="@drawable/lt1" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lt1txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gran_muralla_china"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_9733_9733_9733_9733"
                    android:textAlignment="center"
                    android:textSize="18sp" />


            </LinearLayout>


            <ImageView
                android:id="@+id/lt2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/gran_pir_mide_de_guiza_egipto"
                android:src="@drawable/lt2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lt2txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gran_pir_mide_de_guiza_egipto"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_9733_9733_9733"
                    android:textAlignment="center"
                    android:textSize="18sp" />


            </LinearLayout>


            <ImageView
                android:id="@+id/lt3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/la_alhambra_granada_espa_a"
                android:src="@drawable/lt3" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lt3txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/la_alhambra_granada_espa_a"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_9733_9733_9733"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>


            <ImageView
                android:id="@+id/lt4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/torre_eiffel_par_s_francia"
                android:src="@drawable/lt4" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lt4txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/torre_eiffel_par_s_francia"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_9733_9733_9733_9733"
                    android:textAlignment="center"
                    android:textSize="18sp" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>